[package]
name = "events"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true }
block = { workspace = true }
vrrb_core = { workspace = true }
telemetry = { workspace = true }
primitives = { workspace = true }
thiserror = { workspace = true }
ritelinked = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
secp256k1 = { workspace = true }
uuid = { workspace = true }
lru_time_cache = { workspace = true }
hbbft = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
theater = { workspace = true }
utils = { workspace = true }
cuckoofilter = { workspace = true }
ethereum-types = { workspace = true }
messr = { workspace = true }
vrrb_config = { workspace = true }
signer = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
