[package]
name = "events"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
block = { workspace = true }
chrono = { workspace = true }
cuckoofilter = { workspace = true }
ethereum-types = { workspace = true }
hbbft = { workspace = true }
hex = { workspace = true }
lru_time_cache = { workspace = true }
messr = { workspace = true }
primitives = { workspace = true }
rand = { workspace = true }
ritelinked = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
signer = { workspace = true }
telemetry = { workspace = true }
theater = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
utils = { workspace = true }
uuid = { workspace = true }
vrrb_config = { workspace = true }
vrrb_core = { workspace = true }
