[package]
name = "faucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.17", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.31"


wallet = { workspace = true }
vrrb_core = { workspace = true }
primitives = { workspace = true }
log = { version = "0.4.20", features = [] }

