[package]
name = "faucet"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum = { version = "0.5.17", features = ["macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
telemetry = { workspace = true }
wallet = { workspace = true }
vrrb_core = { workspace = true }
primitives = { workspace = true }
log = { version = "0.4.20", features = [] }
