[package]
name = "faucet"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
primitives = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
telemetry = { workspace = true }
tokio = { workspace = true }
vrrb_core = { workspace = true }
wallet = { workspace = true }
