[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.8.3", features = ["tls"] }
prost = "0.11"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"
